--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Days</title>
     <meta name="description" content="Counting the days till our wedding" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/days.svg" />
     <style>
       html,
       body {
