--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
         step()
       }
 
-      animateArc(136 - weddingDiff)
+      animateArc((1 - weddingDiff / 136) * 100)
     </script>
   </body>
 </html>
